# nd2-rs

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  DATASTRUCTURE.md  README.md
.github/workflows/: ci.yml
examples/: read_metadata.rs  read_summary.rs
src/: constants.rs  error.rs  io.rs  lib.rs  main.rs  reader.rs
src/chunk/: header.rs  map.rs  mod.rs
src/metadata/: attributes.rs  experiment.rs  mod.rs  text_info.rs
src/parse/: clx_lite.rs  mod.rs
src/types/: attributes.rs  experiment.rs  metadata.rs  mod.rs  summary.rs  text_info.rs
tests/: integration.rs  unit.rs
