[package]
name = "nd2-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Pure Rust library for reading Nikon ND2 microscopy files"
license = "MIT"
repository = "https://github.com/keejkrej/nd2-rs"
homepage = "https://github.com/keejkrej/nd2-rs"
documentation = "https://docs.rs/nd2-rs"
keywords = ["microscopy", "nd2", "nikon", "imaging", "bioimaging"]
categories = ["parser-implementations", "science"]

[dependencies]
thiserror = "1.0"
byteorder = "1.5"
serde = { version = "1.0", features = ["derive"] }
flate2 = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
serde_json = "1.0"

[[bin]]
name = "nd2-rs"
path = "src/main.rs"
