[package]
name = "nd2-rs"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
description = "Pure Rust library for reading Nikon ND2 microscopy files"
license = "MIT"
repository = "https://github.com/keejkrej/nd2-rs"
homepage = "https://github.com/keejkrej/nd2-rs"
documentation = "https://docs.rs/nd2-rs"
readme = "README.md"
keywords = ["microscopy", "nd2", "nikon", "imaging", "bioimaging"]
categories = ["parser-implementations", "science"]

[dependencies]
thiserror = "1.0"
byteorder = "1.5"
serde = { version = "1.0", features = ["derive"] }
flate2 = "1.0"

[dev-dependencies]
